<resources>
    <string name="app_name">You</string>
    <string name="greetingMainMenu">Выберите нужный вам раздел.</string>
    <string name="StrongWorkoutWarmUp">Разминка</string>
    <string name="WarmUP01"><b>Растяжка шеи</b>Прижмите подбородок к груди, так чтобы мышцы в задней части шеи растянулись.\nЗадержитесь в этом положении на несколько секунд.</string>
    <string name="WarmUP02"><b>Растяжка трапециевидной мышцы :</b>
        \n1)Возьмите голову одной рукой.\n2)Медленно опускайте голову вниз ухом к плечу, пока вам это не доставляет неудобств.\n3)Задержитесь на 20-30 секунд. Повторите несколько раз. Затем повторите все заново в другую сторону.</string>
    <string name="WarmUP04"><b>Вращение шеей</b>
       \n1)Исходное положение: стоя ноги на ширине плеч.
       \n2)Держа подбородок на одном уровне, повернуть шею в сторону до тех, пор пока можете.
       \n3)Вернитесь в исходное положение и повторите поворот в противоположную сторону. Повторите это упражнение несколько раз.
    </string>
    <string name="WhyUNeedWarmUP">Разминка - это комплекс упражнений, которые выполняются в начале тренировки с целью разогрева организма, разработки мышц, связок и суставов. Как правило разминка перед тренировкой включает в себя выполнении легких аэробных упражнений с постепенным увеличением интенсивности.</string>
    <string name="WhyUNeedWarmUP2">Эффективность разминки оценивается по пульсу: в течение 10 минут частота пульса должна возрасти примерно до 100 ударов в минуту. Также важными элементами разминки являются упражнения на мобилизацию суставов (в том числе и позвоночника по всей длине), растяжение связок и мышц.</string>
    <string name="WhyUNeedWarmUP3">1) Динамическая состоит из пампинга – вы принимаете позу и начинаете тянуться до точки, в которой чувствуете мышечное натяжение, затем возвращаете мышцы в исходное положение, то есть в исходную длину. Далее повторяете процедуру. Динамическая растяжка увеличивает силовые показатели перед «взрывной» силовой тренировкой или во время отдыха между подходами. </string>
    <string name="WhyUNeedWarmUP4">2) Статическая - растяжка подразумевает растягивание мышцы до точки, в которой вы чувствуете мышечное натяжение, и последующее сохранение данного положения на некоторое время. Такая растяжка безопасней динамической, однако она отрицательно сказывается на силовых показателях и показателях в беге, если ее проводить до тренировки.</string>
    <string name="WhyUNeedWarmUP5">Разминка перед тренировкой - очень важный компонент тренировочной программы, и важна она не только в бодибилдинге, но и в остальных видах спорта, тем не менее многие атлеты полностью игнорируют ее.\nЗачем нужна разминка в бодибилдинге:</string>
    <string name="WhyUNeedWarmUP6">
        1) Разминка позволяет предотвратить травмы, и это доказано исследованиями
        \n2) Разминка перед тренировкой повышает эффективность тренинга
        \n3) Вызывает выброс адреналина, который в последующем помогает тренироваться интенсивнее
        \n4) Повышает тонус симпатической нервной системы, которая помогает тренироваться интенсивнее
        \n5) Увеличивает частоту пульса и расширяет капилляры, в связи с чем улучшается кровообращение мышц, а значит и доставка кислорода с питательными веществами
        \n6) Разминка ускоряет метаболические процессы
        \n7) Повышает эластичность мышц и связок
        \n8) Разминка повышает скорость проведения и передачи нервного импульса</string>
    <string name="WhyUNeedWarmUP7">Атлеты должны выполнять разминку перед тренировкой не только потому что она подготавливает тело физически к нагрузкам, но и поднимает ментальную концентрацию, позволяя настроиться на силовой тренинг. Делая разминку правильно, вы почувствуете, что тренировка проходит с гораздо большей производительностью.</string>
    <string name="WarmUP11"><b>Растяжка грудных мышц о стойку</b>
        \n1)П
оложите руку на стену или любую вертикальную поверхность и согните локоть на 90 градусов.
        \n2)Наклонитесь вперед всем телом и слегка в сторону от руки до тех пор, пока не почувствуете напряжение грудных мышц.
        \n3)Задержитесь в этой позе на какое-то время, а затем повторите упражнение с другой стороны.</string>
    <string name="WarmUP14"><b>Грудные мышцы</b>
        \n1)Встаньте в вертикальное положение и тяните вытянутые руки назад, держа при этом их в замке.
        \n2)Поднимите руки к потолку, держа их прямыми, пока не почувствуете растяжение грудных мышц.</string>
    <string name="WarmUP12"><b>Спина</b>
        \nОбхватите одной рукой столб или шест, и откиньтесь назад, выпрямив ноги, так, чтобы мышцы спины растянулись. Задержитесь на рекомендуемое количество секунд в этой позиции и повторите упражнение с другой рукой.</string>
    <string name="WarmUP13"><b>Косые мышцы живота</b>\nПоставьте одну руку на пояс и наклоняйте туловище в эту сторону, при этом тянитесь за рукой. Затем повторите в другую сторону.</string>
    <string name="WarmUP21"><b>Растяжка трицепса</b>
        \n1)Сядьте или встаньте в вертикальное положение.
        \n2)Одну согнутую руку расположите так, чтобы ладонь была на уровне основания шеи, а второй рукой возьмитесь за локоть и потянуть до ощущения растяжения трицепсов (в задней части плеча)
        \n3)Задержитесь на 20-30 секунд. Повторите с другой стороны.</string>
    <string name="WarmUP22"><b>Растяжение заднего пучка дельты</b>
        \n1)Сядьте или встаньте в вертикальное положение.
        \n2)Потяните локоть с противоположной стороны до ощущения растяжения в задней части плеча.
        \n3)Задержитесь на 20-30 секунд. Повторите с другой стороны.
        \n4)Когда тянете локоть, убедитесь, что предплечье остается перпендикулярно полу (пальцы направлены вниз).</string>
    <string name="PageWarmUP31"><b>Растяжение груди</b>
        \n1)Поднимите руки и отведите их на 90 ° от тела. Согните локти под углом 90 °.
        \n2)Положите руки за голову и тяните локти назад, пока не почувствуете растяжку в груди.
        \n3)Задержитесь на 20-30 секунд. Повторите несколько раз.
        \n4)Помните, нижнюю часть спины держите прямо.</string>
    <string name="PageWarmUP32"><b>Растяжка для ног перед тренировкой</b><b>\nВыпады:</b>
        \n1)Исходное положение: стоя ноги на ширине плеч.
        \n2)Сделайте шаг назад с одной ноги, при этом согнув ногу в колене в положение выпад.
        \n3)Спину держите прямо.
        \n4)Вернитесь в исходное положение и повторите несколько раз, затем тоже самое с другой ногой.</string>
    <string name="PageWarmUP33"><b>Выпады в сторону:</b>
        \n1)Исходное положение: ноги в широкой стойке, руки за головой.
        \n2)Перенесите вес тела в сторону и присядьте так, чтобы ваши бедра "выпадали" за ногой.
        \n3)Вернитесь в исходное положение и повторите то же движение в другую сторону.
        \n4)Чередуйте это движение вперед и назад. </string>
    <string name="WarmUP51"><b>Махи ногами</b> - бицепс бедра</string>
    <string name="WarmUP52"><b>Растяжка передних мышц бедра</b>
        \n)Поднимите правую ногу назад и обхватите рукой за голеностоп. Задержитесь на несколько секунд, отпустите ногу. Затем сделайте шаг и повторите тоже самое с другой ногой</string>
    <string name="WarmUP53"><b>Разминка коленных суставов</b>
        \nНоги вместе, возьмитесь руками за колено и выполняйте круговые движения, меняя направление)</string>
    <string name="HowToBenchPrees"><b>Техника выполнения жима лежа :</b>
            \n1)Ложитесь спиной на камейку. Проверьте хват, нужно использовать закрытый хват ( зжатый кулак )
            \n2)Держите штанку руками шире чем ширина плеч.
            \n3)Сведите лопатки вместе.
    </string>
    <string name="HowToBenchPrees2">4)Поднимите штангу и медленно опустите штангу, сохраняя над ней контроль (опускание должно длиться примерно 2 секунды)
        \n5)Опустите гриф к точке, которая находиться ниже линии сосков. Нужно просто дотронуться грифом до груди и затем немедленно выжать штангу вверх ( либо сделать короткую паузу и поднять )
        \n6)Поднимите штангу и на подъёме сделайте выдох.
    </string>
    <string name="HowToBenchPrees3">На рисунке ниже вы можете видеть приблизительные варианты траектории штанги при её подъёме в жиме лёжа (голова находится справа).</string>
    <string name="WhatAboutBenchPrees">
        \n<b>Жим лежа</b> — это базовое упражнение в бодибилдинге и пауэрлифтинге со свободными весами, предназначенное для развития мышц груди, рук (трицепсов) и переднего пучка дельтовидных мышц. Основная статья: какие мышцы работают в жиме лежа.
        \n<b>Мышцы, задействованные в жиме лежа:</b>
    </string>
</resources>