<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BenchPress">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="415dp"
        android:layout_height="560dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/WhatAboutBenchPress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="388dp"
                android:layout_height="116dp"
                android:text="@string/HowToBenchPrees"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="241dp"
                android:layout_height="189dp"
                app:srcCompat="@drawable/scapula" />

            <TextView
                android:layout_width="388dp"
                android:layout_height="wrap_content"
                android:text="@string/HowToBenchPrees2"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="405dp"
                android:layout_height="133dp"
                app:srcCompat="@drawable/benchpress1" />

            <TextView
                android:layout_width="388dp"
                android:layout_height="wrap_content"
                android:text="@string/HowToBenchPrees3"
                android:textColor="@color/black" />


        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/WhatAboutBenchPress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:text="Теория"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="35dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/WhatAboutBenchPress"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>