<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WarmUP3">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="259dp"
        android:layout_height="664dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TextView15"
            android:layout_width="246dp"
            android:layout_height="261dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:gravity="left"
            android:text="@string/WarmUP13"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="182dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="247dp"
            android:maxLength="1000"
            android:text="@string/WarmUP21"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="246dp"
            android:layout_height="204dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="0dp"
            android:text="@string/WarmUP22"
            android:textColor="@color/black" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="152dp"
        android:layout_height="164dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="548dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout2"
        app:srcCompat="@drawable/warmup7" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="153dp"
        android:layout_height="159dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="294dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout2"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/warmup8" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="153dp"
        android:layout_height="200dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout2"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/warmup9" />

    <Button
        android:id="@+id/NextPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="Следующая страница"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>