<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WarmUP5">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="256dp"
        android:layout_height="549dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="246dp"
            android:layout_height="261dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:gravity="left"
            android:text="@string/WarmUP51"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="182dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="247dp"
            android:maxLength="1000"
            android:text="@string/WarmUP52"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="241dp"
            android:layout_height="95dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginBottom="1dp"
            android:text="@string/WarmUP53"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="235dp"
            android:layout_height="153dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            app:srcCompat="@drawable/warmup15" />


    </RelativeLayout>

    <Button
        android:id="@+id/MainMenuStrongActivity"
        android:layout_width="333dp"
        android:layout_height="58dp"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:text="Главное меню силовых тренировок"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="162dp"
        android:layout_height="165dp"
        android:layout_marginStart="254dp"
        android:layout_marginLeft="254dp"
        android:layout_marginTop="248dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016"
        app:srcCompat="@drawable/warmup14" />

    <ImageView
        android:layout_width="146dp"
        android:layout_height="96dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout2"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/warmup16" />

    <Button
        android:id="@+id/MainMenus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="Главное меню"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainMenuStrongActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>