<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WarmUP">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="164dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="696dp"
        android:text="@string/StrongWorkoutWarmUp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="164dp"
        android:layout_marginRight="182dp" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="281dp"
        android:layout_height="536dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="182dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/FirstWarpmUp"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizePresetSizes="none"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:text="@string/WarmUP01"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.294"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="4dp" />

        <TextView
            android:id="@+id/SecondWarmpUP"
            android:layout_width="match_parent"
            android:layout_height="178dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="153dp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizePresetSizes="uniform"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:text="@string/WarmUP02"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/ThreeWarmpUP"
            android:layout_width="232dp"
            android:layout_height="231dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="332dp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizePresetSizes="uniform"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:text="@string/WarmUP04"
            android:textColor="@color/black" />


    </RelativeLayout>

    <Button
        android:id="@+id/WhatButton"
        android:layout_width="47dp"
        android:layout_height="41dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="336dp"
        android:layout_marginRight="336dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/roundedbutton"
        android:text=" ? "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <Button
        android:id="@+id/NextPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="32dp"
        android:text="Следующая страница"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/WhatButton"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="129dp"
        android:layout_height="150dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/warmup1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="129dp"
        android:layout_height="146dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/warmup2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="132dp"
        android:layout_height="197dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/NextPageWarmUP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/warmup3" />


</androidx.constraintlayout.widget.ConstraintLayout>